overflow fixed

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -16,6 +16,7 @@
 
 body {
   width: 100vw;
+  overflow-x: hidden;
 }
 
 canvas {
